incorporacion de atributos al estilo

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -36,6 +36,11 @@
     text-transform: uppercase;
     color:#AA9739;
 }
+.subtitulos {
+    font-size: 22px;
+    text-transform: capitalize;
+    color:#AA9739;
+}
 
 /*-------------footer---------------------*/
 .pie {
